feat: implement Gemini Chat with FastAPI backend and Next.js frontend
- Set up unified project structure with backend/frontend folders
- Implement Python FastAPI backend with DeepSeek API integration
- Add ReAct pattern support with streaming SSE responses
- Create extensible tool registry for file operations and code execution
- Implement Next.js frontend with real-time chat interface
- Add Pydantic models for type-safe API contracts
- Set up structured logging with request tracing
- Add comprehensive test suites for backend components
- Create development tooling with Makefile and environment configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,156 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Root .gitignore for AIPlayGround monorepo
 
-# testing
-/coverage
+# =============================================================================
+# Build Artifacts & Cache (all projects)
+# =============================================================================
 
-# next.js
-/.next/
-/out/
+# Next.js build output
+.next/
+out/
 
-# production
-/build
+# Python build artifacts
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# misc
-.DS_Store
-*.pem
+# Node modules (if at root level)
+node_modules/
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# =============================================================================
+# Environment & Secrets
+# =============================================================================
 
-# local env files
-.env*.local
+# Environment variables
+.env
+.env.local
+.env.*.local
+!.env.example
 !.env.local.example
 
-# vercel
-.vercel
+# Secrets
+*.pem
+*.key
+secrets/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# =============================================================================
+# IDE & Editor
+# =============================================================================
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# IntelliJ / PyCharm / WebStorm
+.idea/
+*.iml
+*.iws
+out/
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+#*#
+.#*
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# =============================================================================
+# OS Generated Files
+# =============================================================================
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+
+# Linux
+*~
+.nfs*
+.directory
+.Trash-*
+
+# =============================================================================
+# Testing & Coverage
+# =============================================================================
+
+# Python testing
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Node testing
+coverage/
+.nyc_output/
+
+# =============================================================================
+# Logs
+# =============================================================================
+
+*.log
+logs/
+log/
+
+# =============================================================================
+# Temporary Files
+# =============================================================================
+
+*.tmp
+*.temp
+*.cache
+tmp/
+temp/
+
+# =============================================================================
+# Project Specific
+# =============================================================================
+
+# React Implementation docs (temporary)
+REACT_IMPLEMENTATION.md
+
+# Local data directories
+data/
+local/
+
+# Docker volumes (if using)
+volumes/
