feat(chat): implement ReAct pattern with tool calls and streaming
- Add ReAct orchestrator to manage thought-action-observation cycles
- Integrate tool registry to execute registered tools during chat
- Enhance chat streaming endpoint to handle reasoning, tool calls, and step events
- Parse and clean reasoning content for better streaming display
- Add event streaming for thoughts, actions, observations, tool results, and errors
- Register execution tools (Python and JS) and file operation tools on startup
- Update deepseek client to handle streaming with error handling improvements
- Add full support for tool execution via /tools endpoint with logging and error management
- Use Pydantic aliases for API compatibility and data validation
- Setup VSCode debug configuration for backend development convenience

--- a/gemini-chat/Makefile
+++ b/gemini-chat/Makefile
@@ -45,7 +45,7 @@ dev-backend:
 	@echo "Starting backend on port $(BACKEND_PORT)..."
 	cd backend && \
 		. .venv/bin/activate && \
-		uvicorn src.gemini_chat_backend.main:app --reload --port $(BACKEND_PORT)
+		PYTHONPATH=src uvicorn gemini_chat_backend.main:app --reload --port $(BACKEND_PORT)
 
 dev-frontend:
 	@echo "Starting frontend on port $(FRONTEND_PORT)..."
